Register the new repository setting in action.yml

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,9 @@ inputs:
   private_key:
     description: "GitHub App private key"
     required: true
+  repository:
+    description: "owner/repository to authenticate against"
+    required: false
 outputs:
   token:
     description: "GitHub installation access token"
